Fix align elements in timestamp-header

--- a/src/css/diff-container.css
+++ b/src/css/diff-container.css
@@ -5,6 +5,7 @@
 .timestamp-container-view{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 #diff-footer{
